# lib_mic_array

./: .gitignore  .gitmodules  Brewfile  CHANGELOG.rst  CMakeLists.txt  Jenkinsfile  LICENSE.txt  Pipfile  README.rst  index.rst  requirements.txt  settings.json  settings.yml  setup.py
cmake/unity/: CMakeLists.txt
demos/: CMakeLists.txt  demo_app.cmake
demos/common/: demo_common.cmake
demos/common/src/: app_common.c  app_common.h  app_common.xc  dac3101_init.c  dac_port.c  device_pll_ctrl.c  device_pll_ctrl.h  pcal6408a.h
demos/demo/: CMakeLists.txt
demos/demo/src/: app.c  app.cpp  app.h  app_config.h  app_i2s.c  main.xc
demos/demo_basic/: CMakeLists.txt
demos/demo_basic/src/: app.h  main.xc
demos/demo_par_decimator/: XCORE-AI-EXPLORER.xn
demos/demo_par_decimator/src/: app.cpp  app.h  app_config.h  app_decimator.hpp  app_i2s.c  app_mic_array.hpp  app_mic_dataline_selector.c  decimator_subtask.c  decimator_subtask.h  main.xc
demos/demo_simple/: CMakeLists.txt
demos/demo_simple/src/: app_i2s.c  main.xc
demos/demo_vanilla/: CMakeLists.txt
demos/demo_vanilla/src/: app.h  app_config.h  app_i2s.c  main.xc
demos/etc/: demo_app.cmake  lib_i2c.cmake  lib_i2s.cmake  lib_xs3_math.cmake
demos/measure_mips/: CMakeLists.txt
demos/measure_mips/src/: app.c  app.cpp  app.h  app_config.h  main.xc
lib_mic_array/: .cproject  .makefile  .project  CMakeLists.txt  LICENSE.txt  lib_build_info.cmake  lib_mic_array.cmake  module_build_info  module_description  wscript
lib_mic_array/api/: defines.h  fir_1x16_bit.h  frame.h  mic_array.h  mic_array_conf_default.h  mic_array_decimator.h  mic_array_defines.h  mic_array_filter.h  mic_array_frame.h  mic_array_framing.h  mic_array_misc.h  pdm_filter_task.h  pdm_rx.h  xcore_compat.h
lib_mic_array/api/etc/: mic_array_filters_default.h
lib_mic_array/api/mic_array/: api.h  dc_elimination.h  decimation_filter_conf.h  decimator.h  frame_transfer.h  framing.h  (+12 more)
lib_mic_array/doc/: conf.py  dc_offset_elimination.md  decimator_stage_1.md  decimator_stage_2.md  decimator_stages.md  getting_started.md  index.rst  mic_array_control_diagram.drawio  notes.rst  overview.md  resource_usage.md  sample_filters.md  software_structure.md  vanilla_api.md
lib_mic_array/src/: Util.cpp  dc_elimination.c  decimate_to_pcm_4ch.S  decimate_to_pcm_4ch_16kHz.S  decimator.c  decimator_interface.backup  decimator_interface.xc  deinterleave16.S  deinterleave2.S  deinterleave4.S  deinterleave8.S  delay_and_sum.xc  fir_1x16_bit.S  frame_transfer.c  framing.c  hires_delay.xc  mic_array_dual.c  mic_array_dual.xc  mic_array_filter.c  mic_array_framing.c  mic_array_misc.c  mic_array_pair.xc  mic_array_setup.c  mic_array_simple.c  mic_array_task.c  mic_array_task.cpp  mic_array_task_internal.hpp  pdm.xc  pdm_filter_task.c  pdm_first_stage.S  pdm_mic_isr.S  pdm_rx.S  pdm_rx.c  pdm_rx16.S  pdm_rx_isr.S  pdm_rx_isr.c  pdm_rx_task.c  pdm_to_pcm_4x.S  proc_pcm.c  pseudo.txt  (+3 more)
test/: CMakeLists.txt
test/src/: app_pll_ctrl.c  count_mips.S  main.xc  print_mips.c
tests/: CMakeLists.txt  Makefile  README.md  README.rst  backend.expect  requirements.txt  runtests.py  test_backend.py  test_channel_ordering.py  test_channel_ordering_FRONTEND_4BIT_4CH.expect  test_channel_ordering_FRONTEND_4BIT_4CH_CHANREORDER.expect  test_channel_ordering_FRONTEND_4BIT_8CH.expect  test_channel_ordering_FRONTEND_4BIT_8CH_CHANREORDER.expect  test_channel_ordering_FRONTEND_8BIT_4CH_CHANREORDER.expect  test_channel_ordering_FRONTEND_8BIT_8CH_CHANREORDER.expect  test_dc_offset_removal.py  test_deps.cmake  test_frontend.py  test_lib_include.py  test_mic_dual.py
tests/app_prefab_xcommon_build/: Makefile
tests/app_regular_xcommon_build/: Makefile
tests/app_vanilla_xcommon_build/: Makefile
tests/app_xcommon_build/: Makefile
tests/building/: CMakeLists.txt  README.md  README.rst
tests/custom_cmake_build/: CMakeLists.txt  README.rst  xs3a.cmake
tests/legacy/: CMakeLists.txt
tests/legacy_tests/: test_channel_ordering.py
tests/legacy_vanilla/: CMakeLists.txt  Makefile
tests/measure_phase_delay/: .cproject  .project  LICENSE.txt  wscript
tests/measure_size/: .cproject  .project  Makefile  wscript
tests/measure_tdh_plus_n/: .cproject  Makefile  config.xscope  wscript
tests/mic_capture/: .cproject  .project  Makefile  config.xscope
tests/signal/: CMakeLists.txt  README.rst
tests/test_1v0_hw_bringup/: .cproject  .project  Makefile
tests/test_1v0_mic_check_12/: .cproject  .project  Makefile  config.xscope
tests/test_backend/: .cproject  .project  Makefile  trace.xstr
tests/test_channel_ordering/: .cproject  .project  LICENSE.txt  Makefile  wscript
tests/test_coords/: .cproject  .project  Makefile
tests/test_crosstalk/: .cproject  .project  Makefile
tests/test_dc_offset_elim/: .cproject  .project  Makefile
tests/test_dc_offset_removal/: .cproject  Makefile  config.xscope
tests/test_delays/: .cproject  .project  Explicit_Calculations.ods  Makefile  config.xscope
tests/test_fft_frames/: .cproject  .project  Makefile
tests/test_fir_model/: .cproject  .project  Makefile  wscript
tests/test_frame_drop/: .cproject  Makefile  wscript
tests/test_hires_delay/: .cproject  Makefile
tests/test_lib_include/: .cproject  Makefile
tests/test_metadata/: .cproject  LICENSE.txt  Makefile  wscript
tests/test_mic_dual/: LICENSE.txt  Makefile  config.xscope  mic_array_conf.h  pcm_to_pdm.py  plot_fft.py  test_all_thd.sh  thdncalculator.py  wscript
tests/test_mic_dual_timing/: Makefile  wscript
tests/test_output/: .cproject  LICENSE.txt  MIC-ARRAY-1V0.xn  Makefile  config.xscope  wscript
tests/test_output_fir/: .cproject  .project  Makefile
tests/test_pdm_interface/: .cproject  .project  Makefile  trace.xstr  wscript
tests/test_rate_change/: .cproject  .project  Makefile  config.xscope
tests/test_windowing_function/: .cproject  .project  Makefile  config.xscope
tests/test_xs2_benign/: CMakeLists.txt
tests/unit/: CMakeLists.txt  README.rst  XVF3610_Q60A.xn
tests/unit2/: CMakeLists.txt
tests/unit_tests/: conftest.py  wscript
tests/xcommon_build/: Makefile
(+801 files in other folders)
